trying to fix some issues with projects and about tabs not being the correct size on mobile

--- a/src/Projects.css
+++ b/src/Projects.css
@@ -1,6 +1,7 @@
 #projectsActive {
     top: 110px;
-    height: calc(100% - 110px);
+    width: 100vw;
+    height: calc(100vh - 110px);
 }
 
 #projectsHidden {
